# test/swagger.yaml
@@ -1506,6 +1506,90 @@ definitions:
       - started_date
     type: object
     x-go-package: github.com/ESNFranceG33kTeam/CosmoAppy/modules/volunteer
+  Volunteer_Stat:
+    properties:
+      archive_date:
+        description: |-
+          Archive date of the stat
+          in: string
+        example: 2023-01
+        type: string
+        x-go-name: ArchiveDate
+      created_at:
+        description: |-
+          CreatedAt date of the stat
+          in: time.Time
+        format: date-time
+        readOnly: true
+        type: string
+        x-go-name: CreatedAt
+      id:
+        description: |-
+          Id of the entry
+          in: int
+        format: int64
+        readOnly: true
+        type: integer
+        x-go-name: Id
+      nb_active_per_hrstatus:
+        description: |-
+          Number of active volunteer by hr status
+          in: json
+        example:
+          employee: 4
+          volunteer: 1
+        readOnly: true
+        type: object
+        x-go-name: NbActivePerHrstatus
+      nb_active_per_university:
+        description: |-
+          Number of active volunteer by university
+          in: json
+        example:
+          Lumiere: 1
+          SciencePo: 4
+        readOnly: true
+        type: object
+        x-go-name: NbActivePerUniversity
+      nb_alumnus:
+        description: |-
+          Number of alumnus
+          in: int
+        example: 12
+        format: int64
+        readOnly: true
+        type: integer
+        x-go-name: NbAlumnus
+      nb_bureau:
+        description: |-
+          Number of volunteer in the bureau
+          in: int
+        example: 12
+        format: int64
+        readOnly: true
+        type: integer
+        x-go-name: NbBureau
+      nb_new_vlt_this_month:
+        description: |-
+          Number of new volunteer this month
+          in: int
+        example: 12
+        format: int64
+        readOnly: true
+        type: integer
+        x-go-name: NbNewVlt
+      updated_at:
+        description: |-
+          UpdatedAt date of the stat
+          in: time.Time
+        format: date-time
+        readOnly: true
+        type: string
+        x-go-name: UpdatedAt
+    required:
+      - archive_date
+    type: object
+    x-go-package: github.com/ESNFranceG33kTeam/CosmoAppy/modules/volunteer
 info:
   description: |-
     the purpose of this application is to provide an application
@@ -2977,6 +3061,56 @@ paths:
           schema:
             $ref: '#/definitions/CommonError'
       summary: Update a volunteer.
+      tags:
+        - volunteer
+  /auth/volunteers/stats/monthly:
+    get:
+      operationId: MonthlyStatsIndex
+      responses:
+        "200":
+          description: CommonSuccess
+          schema:
+            $ref: '#/definitions/CommonSuccess'
+        "400":
+          description: CommonError
+          schema:
+            $ref: '#/definitions/CommonError'
+      summary: Get stats list.
+      tags:
+        - volunteer
+  /auth/volunteers/stats/monthly/{archive_date}:
+    get:
+      operationId: MonthlyStatsShowByDate
+      parameters:
+        - in: path
+          name: archive_date
+          required: true
+          type: string
+      responses:
+        "200":
+          description: CommonSuccess
+          schema:
+            $ref: '#/definitions/CommonSuccess'
+        "400":
+          description: CommonError
+          schema:
+            $ref: '#/definitions/CommonError'
+      summary: Show stat for the archive_date.
+      tags:
+        - volunteer
+  /auth/volunteers/stats/monthly/create:
+    post:
+      operationId: AutoMonthlyStatCreate
+      responses:
+        "200":
+          description: CommonSuccess
+          schema:
+            $ref: '#/definitions/CommonSuccess'
+        "400":
+          description: CommonError
+          schema:
+            $ref: '#/definitions/CommonError'
+      summary: Generate stat of the past month.
       tags:
         - volunteer
   /health:
